﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-11-24 Michal Čihař  <michal@cihar.com>
    * libraries/header_http.inc.php, libraries/header_meta_style.inc.php: Fix
      XSS on some libraries (CVE-2005-3665).

2005-11-24 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * themes/original/*, css/phpmyadmin.css.php:
      - updated theme
      - added version, to include only needed styles

2005-11-23 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * *REVERTED* libraries/display_select_lang.lib.php: correct lang definition
    * themes/original/*, libraries/auth/*.auth.lib.php, server_privilegs.php,
      db_printview.php, tbl_properties_structure.php, tbl_properties.inc.php,
      tbl_relation.php, browse_foreigners.php, css/phpmyadmin.css.php,
      header_printview.inc.php, header_meta_style.inc.php, themes.php:
      - drop PMA_setFontSizes()
    * browse_foreigners.php, css/phpmyadmin.css.php, querywindow.php, themes.php
      header.inc.php, libraries/auth/config.auth.lib.php, db_details_qbe.php
      libraries/auth/cookie.auth.lib.php, server_collations.php
      - moved styles into css
    * themes.php, css/phpmyadmin.css.php:
      - moved styles into css
      - no need for javascript
    * relation.lib.php: uninitialized variable
    * tbl_select.php, css/phpmyadmin.css.php:
      - moved styles into css
      - minor code improvements

2005-11-23 Michal Čihař  <michal@cihar.com>
    * config.default.php, libraries/import/csv.php, libraries/import/ldi.php:
      Drop optional escaping as this should not have any real functionality.
    * libraries/import.lib.php: Do not overwrite error message from import in
      case of single SQL query is being executed.
    * libraries/import/csv.php: Make enclosing behaviour same as in MySQL LOAD
      DATA (bug #1363532).
    * lang/*: Remove unused messages.
    * main.php, libraries/display_select_lang.lib.php,